--- a/src/_includes/assets/styles/layout/base.scss
+++ b/src/_includes/assets/styles/layout/base.scss
@@ -9,7 +9,7 @@ main {
   .content-wrapper {
     margin-top: rem(52);
 
-    @media (min-width: 64em) {
+    @media (min-width: 77em) { // 1232px
       margin-top: rem(77);
     }
 
